[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/Nodes/PixelCondition.gd" type="Script" id=1]
[ext_resource path="res://assets/graphics/misc/icon_pixel_allowed.png" type="Texture" id=2]

[node name="PanelContainer" type="PanelContainer"]
margin_right = 94.0
margin_bottom = 94.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 90.0

[node name="GridContainer" type="GridContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 90.0
margin_bottom = 90.0
columns = 3

[node name="TL" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_right = 25.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/TL"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="TC" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_left = 29.0
margin_right = 54.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/TC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="TR" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_left = 58.0
margin_right = 83.0
margin_bottom = 25.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/TR"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="CL" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_top = 29.0
margin_right = 25.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/CL"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="Middle" type="Button" parent="GridContainer"]
margin_left = 29.0
margin_top = 29.0
margin_right = 54.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )
custom_colors/font_color = Color( 1, 0, 0, 1 )
text = "X"

[node name="CR" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_left = 58.0
margin_top = 29.0
margin_right = 83.0
margin_bottom = 54.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/CR"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="BL" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_top = 58.0
margin_right = 25.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/BL"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="BC" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_left = 29.0
margin_top = 58.0
margin_right = 54.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/BC"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[node name="BR" type="Button" parent="GridContainer" groups=["UIButtons"]]
margin_left = 58.0
margin_top = 58.0
margin_right = 83.0
margin_bottom = 83.0
rect_min_size = Vector2( 25, 25 )

[node name="TextureRect" type="TextureRect" parent="GridContainer/BR"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -7.5
margin_top = -7.5
margin_right = 7.5
margin_bottom = 7.5
texture = ExtResource( 2 )
expand = true

[connection signal="pressed" from="GridContainer/TL" to="." method="_on_TL_pressed"]
[connection signal="pressed" from="GridContainer/TC" to="." method="_on_TC_pressed"]
[connection signal="pressed" from="GridContainer/TR" to="." method="_on_TR_pressed"]
[connection signal="pressed" from="GridContainer/CL" to="." method="_on_CL_pressed"]
[connection signal="pressed" from="GridContainer/Middle" to="." method="_on_Middle_pressed"]
[connection signal="pressed" from="GridContainer/CR" to="." method="_on_CR_pressed"]
[connection signal="pressed" from="GridContainer/BL" to="." method="_on_BL_pressed"]
[connection signal="pressed" from="GridContainer/BC" to="." method="_on_BC_pressed"]
[connection signal="pressed" from="GridContainer/BR" to="." method="_on_BR_pressed"]
